--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 mapboxgl.accessToken = '';
 var map = new mapboxgl.Map({
     container: 'map', // container id
-    style: 'https://mstanhall.github.io/brewdog-map/style.json', // stylesheet location
+    style: 'https://mstanhall.github.io/style.json', // stylesheet location
     center: [-1.25, 52.2], // starting position [lng, lat]
     zoom: 6 // starting zoom
 });
